www/css/layout.css
h1, h2, h3 {
    margin: 0;
}

h2 {
    font-size: 14pt;
}

* {
    font-family: 'Cantarell', sans-serif;
}

.hidden {
    width: 0;
    height: 0;
    font-size: 0;
    opacity: 0%;
    position: absolute;
    pointer-events: none;
    color: transparent;
    left: -100000px;
}

.flex-no-expand {
    width: 0;
    flex-grow: 1;
}

.small-text {
    font-size: 10pt;
}

.flex-spacer {
    flex-grow: 1;
}

body {
    width: 500px;
    width: -moz-fit-content;
    width: fit-content;
    min-width: -moz-min-content;
    min-width: min-content;
    max-width: 100vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: auto;
}

header#header {
    display: flex;
    align-items: baseline;
    flex-wrap: wrap;
    gap: 10px;
    width: 100%;
    width: -moz-available;
    width: -webkit-fill-available;
    width: fill-available;
}

.header-right {
    flex-grow: 1;
    float: right;
    align-self: center;
}

h1#title {
    width: -moz-fit-content;
    width: fit-content;
    display: inline-block;
}

form#language-select-form {
    display: flex;
    justify-content: end;
    align-items: center;
    gap: 5px;
}

.ui-frame {
    max-width: 100vw;
    box-sizing: border-box;
    padding: 10px;
    margin-bottom: 10px;
}
div.ui-frame {
    width: 100%;
}
dialog.ui-frame {
    position: fixed;
    top: 200px;
    margin-top: 0;
}

dialog.error {
    max-width: 350px;
}

.flex-column {
    max-width: 100%;
    display: flex;
    flex-direction: column;
    gap: 5px;
    flex-grow: 1;
}

div#transpo-main {
    min-width: 850px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 10px;
}

form#upload-form {
    flex-grow: 3;
}

div.nojs-warning {
    padding: 5px;
}

div#file-area {
    justify-content: center;
    padding: 5px;
}

input#file-input {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    flex-grow: 1;
    width: 0;
}

div#file-list-container {
    flex-grow: 1;
    overflow-y: auto;
    height: 300px;
    direction: rtl;
}

ul#file-list {
    width: 100%;
    padding: 0;
    margin: 0;
    list-style: none;
    direction: ltr;
}

ul#file-list > li {
    display: flex;
    flex-direction: row;
    align-items: baseline;
    gap: 5px;
}

ul#file-list > li > span.file-list-item-name {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.flex-row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 10px;
}

div#file-area > div.max-upload-size-warning {
    text-align: center;
}


fieldset {
    border: none;
    padding: 2px 0;
}

fieldset#time-limit-fields {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 10px;
}

fieldset#time-limit-fields > legend {
    word-spacing: initial;
}

fieldset#time-limit-fields > div {
    display: inline-block;
}

hr {
    width: 100%;
    margin: 0;
}

fieldset.togglable-field {
    display: flex;
    flex-direction: row;
    align-items: center;
}

fieldset.togglable-field > label {
    user-select: none;
}

fieldset.togglable-field input[type="checkbox"] {
    margin-left: 0;
    margin-right: 10px;
    height: 20px;
    width: 20px;
}

fieldset.togglable-field div {
    display: flex;
    flex-direction: row;
    gap: 5px;
    align-items: center;
    text-wrap: nowrap;
    overflow: hidden;
    width: 0;
    visibility: hidden;
    flex-grow: 1;
}

fieldset.togglable-field input:checked ~ div {
    height: initial;
    width: initial;
    visibility: visible;
}

fieldset.togglable-field input:checked ~ label {
    text-wrap: nowrap;
    width: 0;
    visibility: hidden;
}


input[type="text"] {
    height: 25px;
    flex-grow: 1;
}

input[type="number"] {
    width: 50px;
    height: 25px;
}

input[type="number"]#days-input {
    width: 60px;
}


button#upload-button, button#download-button {
    width: 100%;
    align-self: center;
}


div#uploaded-area {
    display: flex;
    flex-direction: column;
    min-width: 300px;
    min-height: 200px;
    padding: 5px;
    flex-grow: 1;
}

div#uploaded-list-container {
    direction: rtl;
    width: 100%;
    overflow: visible;
    overflow-y: auto;
    flex-grow: 1;
    height: 0;
}

ul#uploaded-list {
    direction: ltr;
    list-style: none;
    padding: 0;
    margin: 0;
    width: 100%;
}

ul#uploaded-list > li {
    height: 35px;
    display: flex;
    flex-direction: row;
    gap: 2px;
    align-items: center;
    flex-wrap: wrap;
}

ul#uploaded-list > li > a {
    display: flex;
    gap: 5px;
    white-space: nowrap;
}

ul#uploaded-list > li > a > span.uploaded-list-item-file-name {
    overflow: hidden;
    text-overflow: ellipsis;
}

ul#uploaded-list > li.failed > button.uploaded-list-item-copy-url {
    display: none;
}

ul#uploaded-list > li > progress {
    width: 0;
    height: 3px;
    position: relative;
    top: -4px;
    appearance: none;
    transition: all 0.2s;
    flex-basis: 100%;
}

textarea {
    min-width: 100%;
    max-width: 100%;
    box-sizing: border-box;
    height: 50vh;
    max-height: calc(100vh - 40px);
    min-height: 100px;
}

.throbber::before {
    content: "";
    display: block;
    width: 20px;
    height: 20px;
    top: 18px;
    margin-top: -20px;
    position: relative;
}

@media (max-width: 500px) {
    form#language-select-form {
        position: absolute;
        top: 2px;
        right: 5px;
        font-size: 9pt;
    }
}

@media (max-width: 850px) {
    div#transpo-main {
        min-width: 0;
        width: 100vw;
    }
}

@media (max-width: 720px) {
    div#file-list-container {
        height: 150px;
    }
}

